added the GenJetLeptonFinder class, see ChangeLog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-11-17  Hauke Held  <held@cern.ch>
+
+	* added the GenJetLeptonFinder class and adjusted the BuildFile accordingly 
+	
+
 2009-10-29  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-04-02
