tag V00-05-02: minor fix.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2009-11-19  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
+	* tag V00-05-02
+	* minor fix
+
 	* tag V00-05-01
 	* style improvements to jet_inspect_graphs_c
 	* fix CommandLine: only now can [v]string parmeter values with
