--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-10-18  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-08-01
+	* pick up changes by Hauke
+
 2010-07-30  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-08-00
