--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-03-12  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-09-00
+	* transition to CMSSW_3_11_X
+
 2011-02-15  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-08-08
