--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-03-12  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-12-00
+	transition to CMSSW_3_11_X
+
 2011-02-16  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-11-01
